[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "esmerald_timing"
description = "The scheduler that nobody wants but every application needs."
long_description = "The scheduler that nobody wants but every application needs."
readme = "README.md"
requires-python = ">=3.7"
dynamic = ['version']
license = "MIT"
authors = [
    { name = "Tiago Silva", email = "tiago.arasilva@gmail.com" },
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: AnyIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "asyncio>=3.4.3,<4.0.0",
]
keywords = ["api", "rest", "http", "asgi", "esmerald", "pydantic", "starlette", "fastapi", "apscheduler", "framework", "websocket", "openapi", "ml", "machine learning", "scheduler", "cron", "esmerald"]

[project.urls]
Homepage = "https://github.com/dymmond/esmerald-timing"
Documentation = "https://github.com/dymmond/esmerald-timing"
Changelog = "https://dymmond.com/esmerald-timing/changelog/"
Funding = "https://github.com/sponsors/tarsil"
Source = "https://github.com/dymmond/esmerald-timing"

[project.optional-dependencies]
test = [
    "esmerald>=0.13.0",
    "asynctest>=0.13.0,<1.0.0",
    "pytest >=7.1.3,<8.0.0",
    "pytest-cov >=2.12.0,<5.0.0",
]

dev = [
    "autoflake >=1.4.0,<3.0.0",
    "black>=22.10.0,<25.0.0",
    "flake8>=3.8.3,<7.0.0",
    "isort>=5.0.6,<6.0.0",
    "mypy>=0.982,<2.0.0",
    "pre-commit >=2.17.0,<3.0.0",
    "watchfiles>=0.16.1,<0.22.0"
]

all = [
    "timing-asgi>=0.3.0,<4.0.0",
]

[tool.hatch.version]
path = "esmerald_timing/__init__.py"

[tool.isort]
profile = "black"
known_third_party = ["esmerald_timing", "pydantic", "starlette", "esmerald"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "esmerald_timing.tests.*"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
]
xfail_strict = true
junit_family = "xunit2"

[tool.hatch.build.targets.sdist]
include = [
    "/esmerald_timing",
]
